--- a/frontend/src/components/NavBar.scss
+++ b/frontend/src/components/NavBar.scss
@@ -1,8 +1,10 @@
 .navBar {
-    width: 100%;
-    gap: 1rem;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 8rem;
+    background: #202124;
+    position: fixed;
+    margin-left: 0;
+    top: 0;
 }
