--- a/frontend/src/components/Categories.scss
+++ b/frontend/src/components/Categories.scss
@@ -1,11 +1,11 @@
 .categories {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background: #1A1A1A;
-    width: 15rem;
+    width: 100%;
     height: 100vh;
-    margin-top: 0;
-    border-radius: 10px;
+    border-radius: 50px;
 
     h1, h2 {
         margin: 0;
