--- a/frontend/src/pages/LoginPage.scss
+++ b/frontend/src/pages/LoginPage.scss
@@ -1,3 +1,8 @@
 .loginPage {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin-left: 9rem;
 }
