--- a/frontend/src/components/Categories.scss
+++ b/frontend/src/components/Categories.scss
@@ -1,10 +1,25 @@
+.categoryPage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+
 .categories {
+    display: flex;
+    flex-flow: row wrap;
+    height: 100vh;
+    width: 100%;
+    gap: 1rem
+}
+
+.categoryItem {
     display: flex;
     flex-direction: column;
     align-items: center;
     background: #1A1A1A;
-    width: 100%;
-    height: 100vh;
+    width: 18%;
+    height: 100%;
     border-radius: 50px;
 
     h1, h2 {
