Disabled scrollen on site, added scrolling for categories and payments

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,4 +1,10 @@
 body {
     background-color: #282c34;
     color: white;
+    overflow: hidden;
+}
+
+#scroller {
+    overflow: auto;
+    height: 100px;
 }
