--- a/frontend/src/pages/HomePage.scss
+++ b/frontend/src/pages/HomePage.scss
@@ -6,7 +6,43 @@
 }
 
 .homeCategories {
-    width: 20rem;
+    padding: .5rem 1rem .5rem 1rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 50px;
+    height: 100vh;
+    background: #1A1A1A;
+    width: 18rem;
+    overflow: auto;
+
+    .categoryItem {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        border-radius: 50px;
+        background: #282A36;
+        justify-content: space-between;
+        width: 100%;
+
+        h1 {
+            font-size: 1.7rem;
+        }
+
+        h2 {
+            font-size: 1.4rem;
+        }
+
+        h1, h2 {
+            margin-left: 1rem;
+            margin-right: 1rem;
+        }
+    }
+}
+
+.homeCategories::-webkit-scrollbar {
+    display: none;
 }
 
 .recentPayments {
