--- a/frontend/src/components/Categories.scss
+++ b/frontend/src/components/Categories.scss
@@ -1,6 +1,48 @@
+
 .categoryPage {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    height: 100vh;
+    gap: 1rem;
+    width: 100vw;
+}
+
+.categoryHeader {
+    display: flex;
+    align-self: center;
+}
+
+.categories {
+    display: flex;
+    flex-direction: row;
+    margin: 0 1rem 0 1rem;
+    padding: .5rem;
+    background: #1A1A1A;
+    gap: 1rem;
+    overflow-x: scroll;
+
+    .categoryItem {
+        display: flex;
+        flex-direction: row;
+        flex: 0 0 auto;
+        align-items: center;
+        border-radius: 50px;
+        background: #282A36;
+        justify-content: space-between;
+        width: 25rem;
+        gap: 1rem;
+
+        h1 {
+            font-size: 1.7rem;
+        }
+
+        h2 {
+            font-size: 1.4rem;
+        }
+
+        h1, h2 {
+            align-self: start;
+            margin-left: 1rem;
+            margin-right: 1rem;
+        }
+    }
 }
