--- a/frontend/src/pages/HomePage.scss
+++ b/frontend/src/pages/HomePage.scss
@@ -2,20 +2,20 @@
     display: flex;
     flex-direction: row;
     gap: 1rem;
-    margin-left: 9rem;
 }
 
-.homeCategories {
+.homeCategories, .recentPayments {
     padding: .5rem 1rem .5rem 1rem;
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: 1rem;
-    border-radius: 50px;
-    height: 100vh;
+    border-radius: 10px;
     background: #1A1A1A;
-    width: 18rem;
     overflow: auto;
+}
+
+.homeCategories {
 
     .categoryItem {
         display: flex;
@@ -24,7 +24,6 @@
         border-radius: 50px;
         background: #282A36;
         justify-content: space-between;
-        width: 100%;
 
         h1 {
             font-size: 1.7rem;
@@ -43,8 +42,4 @@
 
 .homeCategories::-webkit-scrollbar {
     display: none;
-}
-
-.recentPayments {
-    width: 20rem;
 }
