--- a/frontend/src/components/Categories.scss
+++ b/frontend/src/components/Categories.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     gap: 1rem;
     width: 100vw;
+    overflow: auto;
 }
 
 .categoryHeader {
@@ -14,18 +15,32 @@
 .categories {
     display: flex;
     flex-direction: row;
+    border-radius: 10px;
     margin: 0 1rem 0 1rem;
     padding: .5rem;
     background: #1A1A1A;
     gap: 1rem;
-    overflow-x: scroll;
+    height: 100%;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar {
+        height: 10px;
+        width: 10px;
+        background: #1A1A1A;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: #484848;
+        -webkit-border-radius: 1ex;
+        -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.75);
+    }
 
     .categoryItem {
         display: flex;
         flex-direction: row;
         flex: 0 0 auto;
         align-items: center;
-        border-radius: 50px;
+        border-radius: 20px;
         background: #282A36;
         justify-content: space-between;
         width: 25rem;
