--- a/frontend/src/pages/HomePage.scss
+++ b/frontend/src/pages/HomePage.scss
@@ -1,28 +1,44 @@
 .homePage {
+    margin-left: 1rem;
     display: flex;
     flex-direction: row;
     gap: 1rem;
+    overflow: auto;
 }
 
 .homeCategories, .recentPayments {
-    padding: .5rem 1rem .5rem 1rem;
     display: flex;
+    padding: .5rem 1rem .5rem 1rem;
     align-items: center;
     flex-direction: column;
     gap: 1rem;
     border-radius: 10px;
     background: #1A1A1A;
-    overflow: auto;
+    width: 20rem;
 }
 
 .homeCategories {
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+        height: 10px;
+        width: 10px;
+        background: #1A1A1A;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: #484848;
+        -webkit-border-radius: 1ex;
+        -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.75);
+    }
 
     .categoryItem {
         display: flex;
         flex-direction: row;
         align-items: center;
-        border-radius: 50px;
+        border-radius: 30px;
         background: #282A36;
+        width: 100%;
         justify-content: space-between;
 
         h1 {
@@ -38,8 +54,4 @@
             margin-right: 1rem;
         }
     }
-}
-
-.homeCategories::-webkit-scrollbar {
-    display: none;
 }
