--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -5,3 +5,15 @@
     height: 100vh;
     overflow: hidden;
 }
+
+::-webkit-scrollbar {
+    height: 20px;
+    width: 10px;
+    background: #1A1A1A;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #484848;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.75);
+}
