--- a/frontend/src/components/Categories.scss
+++ b/frontend/src/components/Categories.scss
@@ -21,30 +21,35 @@
     background: #1A1A1A;
     gap: 1rem;
     height: 100%;
-    overflow-x: auto;
+    overflow-y: auto;
 
-    &::-webkit-scrollbar {
-        height: 10px;
-        width: 10px;
-        background: #1A1A1A;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background: #484848;
-        -webkit-border-radius: 1ex;
-        -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.75);
-    }
-
-    .categoryItem {
+    .categoryItemCard {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         flex: 0 0 auto;
         align-items: center;
         border-radius: 20px;
         background: #282A36;
-        justify-content: space-between;
         width: 25rem;
         gap: 1rem;
+        overflow-x: auto;
+
+        .categoryItem {
+            display: flex;
+            flex-direction: row;
+        }
+
+        .payments {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            margin-bottom: 1rem;
+
+            .paymentItem {
+                background: #1d1d1d;
+                border-radius: 10px;
+            }
+        }
 
         h1 {
             font-size: 1.7rem;
