--- a/frontend/src/components/Categories.scss
+++ b/frontend/src/components/Categories.scss
@@ -37,30 +37,40 @@
         .categoryItem {
             display: flex;
             flex-direction: row;
+
         }
 
         .payments {
             display: flex;
             flex-direction: column;
             gap: 1rem;
+            width: 100%;
             margin-bottom: 1rem;
 
             .paymentItem {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
                 background: #1d1d1d;
                 border-radius: 10px;
+                margin: 0 1rem;
             }
         }
 
         h1 {
-            font-size: 1.7rem;
+            font-size: 1.8rem;
+            font-style: normal;
+            font-weight: normal;
         }
 
         h2 {
             font-size: 1.4rem;
+            font-style: normal;
+            font-weight: normal;
         }
 
         h1, h2 {
-            align-self: start;
+            align-self: center;
             margin-left: 1rem;
             margin-right: 1rem;
         }
