--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,4 +1,19 @@
-body {
-    background-color: #282c34;
-    color: white;
+.App {
+    display: flex;
+    align-content: stretch;
+    align-items: stretch;
+    height: 100vh;
+    overflow: hidden;
+}
+
+::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+    background: #1A1A1A;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #484848;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.75);
 }
