--- a/frontend/src/pages/HomePage.scss
+++ b/frontend/src/pages/HomePage.scss
@@ -1,6 +1,45 @@
 .homePage {
+    margin-left: 1rem;
     display: flex;
     flex-direction: row;
     gap: 1rem;
-    margin-left: 9rem;
+    overflow: auto;
+}
+
+.homeCategories, .recentPayments {
+    display: flex;
+    padding: .5rem 1rem .5rem 1rem;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 10px;
+    background: #1A1A1A;
+    width: 20rem;
+}
+
+.homeCategories {
+    overflow-y: auto;
+
+    .categoryItem {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        border-radius: 30px;
+        background: #282A36;
+        width: 100%;
+        justify-content: space-between;
+
+        h1 {
+            font-size: 1.7rem;
+        }
+
+        h2 {
+            font-size: 1.4rem;
+        }
+
+        h1, h2 {
+            margin-left: 1rem;
+            margin-right: 1rem;
+        }
+    }
 }
