--- a/frontend/src/components/Categories.scss
+++ b/frontend/src/components/Categories.scss
@@ -1,23 +1,9 @@
-
-.categoryPage {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 100vw;
-    overflow: auto;
-}
-
-.categoryHeader {
-    display: flex;
-    align-self: center;
-}
-
 .categories {
     display: flex;
     flex-direction: row;
     border-radius: 10px;
+    border: .5rem solid #1A1A1A;;
     margin: 0 1rem 0 1rem;
-    padding: .5rem;
     background: #1A1A1A;
     gap: 1rem;
     height: 100%;
@@ -31,7 +17,6 @@
         border-radius: 20px;
         background: #282A36;
         width: 25rem;
-        gap: 1rem;
         overflow-x: auto;
 
         .categoryItem {
@@ -47,9 +32,14 @@
             width: 100%;
             margin-bottom: 1rem;
 
+            h1, h2, h3 {
+                margin: .5rem;
+            }
+
             .paymentItem {
                 display: flex;
                 flex-direction: column;
+                justify-content: space-between;
                 align-items: center;
                 background: #1d1d1d;
                 border-radius: 10px;
@@ -59,20 +49,18 @@
 
         h1 {
             font-size: 1.8rem;
-            font-style: normal;
-            font-weight: normal;
         }
 
         h2 {
             font-size: 1.4rem;
-            font-style: normal;
-            font-weight: normal;
         }
 
         h1, h2 {
             align-self: center;
             margin-left: 1rem;
             margin-right: 1rem;
+            font-style: normal;
+            font-weight: normal;
         }
     }
 }
