--- a/frontend/src/pages/CategoryPage.scss
+++ b/frontend/src/pages/CategoryPage.scss
@@ -1,3 +1,12 @@
 .categoryPage {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100vw;
+    overflow: auto;
+}
 
+.categoryHeader {
+    display: flex;
+    align-self: center;
 }
