--- a/frontend/src/pages/HomePage.scss
+++ b/frontend/src/pages/HomePage.scss
@@ -8,7 +8,8 @@
 
 .homeCategories, .recentPayments {
     display: flex;
-    padding: .5rem 1rem .5rem 1rem;
+    border: .5rem solid #1A1A1A;;
+    padding: 0 .5rem;
     align-items: center;
     flex-direction: column;
     gap: 1rem;
@@ -20,13 +21,16 @@
 .homeCategories {
     overflow-y: auto;
 
+    .categoryItemCard {
+        width: 100%;
+    }
+
     .categoryItem {
         display: flex;
         flex-direction: row;
         align-items: center;
         border-radius: 30px;
         background: #282A36;
-        width: 100%;
         justify-content: space-between;
 
         h1 {
