--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -17,3 +17,8 @@
     -webkit-border-radius: 1ex;
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.75);
 }
+
+.authDiv {
+    display: flex;
+    flex-direction: row;
+}
