--- a/frontend/src/pages/CategoryPage.scss
+++ b/frontend/src/pages/CategoryPage.scss
@@ -59,6 +59,12 @@
                 margin: 0 1rem;
             }
 
+            .addCategoryForm {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
             .payDate {
                 display: flex;
                 justify-content: center;
