--- a/frontend/src/pages/HomePage.scss
+++ b/frontend/src/pages/HomePage.scss
@@ -3,7 +3,13 @@
     display: flex;
     flex-direction: row;
     gap: 1rem;
-    overflow: auto;
+    overflow: hidden;
+}
+
+.pieChart {
+    display: flex;
+    width: 50%;
+    color: black;
 }
 
 .homeCategories, .recentPayments {
