--- a/frontend/src/pages/AdminPage.scss
+++ b/frontend/src/pages/AdminPage.scss
@@ -1,4 +1,4 @@
-.changePaymentPage {
+.adminPage {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -9,6 +9,14 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+    }
+
+    input {
+        margin-bottom: 1rem;
+    }
+
+    h3 {
+        margin: 0;
     }
 }
 
