Show recent payments with date on Home page

--- a/frontend/src/pages/HomePage.scss
+++ b/frontend/src/pages/HomePage.scss
@@ -28,6 +28,19 @@
         width: 100%;
     }
 
+    .paymentDateWrap {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .recentPaymentItems {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+        }
+    }
+
     .categoryItem, .recentPaymentItem {
         display: flex;
         flex-direction: row;
