--- a/frontend/src/pages/SchedulingPage.scss
+++ b/frontend/src/pages/SchedulingPage.scss
@@ -22,6 +22,12 @@
     height: 100%;
     overflow-y: auto;
 
+    .seriesItems {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+    }
+
     .seriesItemCard {
         display: flex;
         flex-direction: column;
@@ -46,6 +52,7 @@
             border-radius: 10px;
             width: 85%;
             margin: 0 1rem;
+            padding-bottom: 1rem;
         }
 
 
