--- a/frontend/src/pages/HomePage.scss
+++ b/frontend/src/pages/HomePage.scss
@@ -32,12 +32,14 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 100%;
 
         .recentPaymentItems {
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 1rem;
+            width: 100%;
         }
     }
 
