--- a/frontend/src/pages/SchedulingPage.scss
+++ b/frontend/src/pages/SchedulingPage.scss
@@ -22,6 +22,13 @@
     height: 100%;
     overflow-y: auto;
 
+    form {
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+        width: 18rem;
+    }
+
     .seriesItems {
         display: flex;
         flex-direction: row;
@@ -73,6 +80,6 @@
     }
 }
 
-.MuiInputLabel-root {
+.MuiInputLabel-root, .MuiOutlinedInput-input {
     color: white;
 }
