--- a/frontend/src/pages/DepositPage.scss
+++ b/frontend/src/pages/DepositPage.scss
@@ -33,9 +33,30 @@
                 align-items: center;
                 border-radius: 20px;
                 background: #282A36;
-                height: 10rem;
+                height: 12rem;
                 width: 15rem;
                 overflow-x: auto;
+
+                .depositButtons {
+                    display: flex;
+
+                    a {
+                        text-decoration: none;
+                    }
+
+                    span {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        color: white;
+                        background: #1A1A1A;
+                        border-radius: 30px;
+                        text-align: center;
+                        height: 2rem;
+                        width: 4rem;
+                        margin: .5rem;
+                    }
+                }
             }
         }
 
