--- a/frontend/src/pages/SchedulingPage.scss
+++ b/frontend/src/pages/SchedulingPage.scss
@@ -45,6 +45,23 @@
         width: 15rem;
         overflow-x: auto;
 
+        a {
+            text-decoration: none;
+        }
+
+        span {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            background: #1A1A1A;
+            border-radius: 30px;
+            text-align: center;
+            height: 2rem;
+            width: 4rem;
+            margin: .5rem;
+        }
+
         .seriesItem {
             display: flex;
             flex-direction: column;
