--- a/frontend/src/components/Button.scss
+++ b/frontend/src/components/Button.scss
@@ -3,11 +3,11 @@
     align-items: center;
     justify-content: center;
     color: white;
-    background: #1A1A1A;
+    background: #0070BA;
     border-radius: 30px;
     text-align: center;
     height: 2rem;
-    width: 85%;
-    margin: .5rem;
-    pointer-events: visible;
+    margin: 0;
+    cursor: pointer;
+    border: #0070BA;
 }
