--- a/frontend/src/components/navbar/NavBar.scss
+++ b/frontend/src/components/navbar/NavBar.scss
@@ -1,20 +1,20 @@
 .navBar {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 8rem;
-    background: #36393F;
+    background: #1A1A1A;
     gap: .5rem;
+    padding: .5rem;
 
-    span {
+    div {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        color: white;
-        background: #1A1A1A;
-        border-radius: 30px;
-        text-align: center;
-        height: 2rem;
-        margin: .5rem;
+        flex-direction: column;
+        gap: .5rem;
+
+        .button {
+            width: 100%;
+        }
     }
 
     a {
