--- a/frontend/src/components/Button.scss
+++ b/frontend/src/components/Button.scss
@@ -5,7 +5,7 @@
     text-align: center;
     padding: .5rem 1rem;
     cursor: pointer;
-    border: #0070BA;
+    border: transparent;
 
     transition: ease background-color 250ms;
     &:hover {
