--- a/frontend/src/pages/CategoryPage.scss
+++ b/frontend/src/pages/CategoryPage.scss
@@ -15,12 +15,13 @@
     align-self: center;
 }
 
+
 .categories {
     display: flex;
     flex-direction: row;
     border-radius: 10px;
-    border: .5rem solid #1A1A1A;;
-    margin: 0 1rem 0 1rem;
+    border: .5rem solid #1A1A1A;
+    margin: 0 1rem;
     background: #1A1A1A;
     gap: 1rem;
     height: 100%;
@@ -30,7 +31,6 @@
         display: flex;
         flex-direction: column;
         flex: 0 0 auto;
-        align-items: center;
         border-radius: 20px;
         background: #282A36;
         width: 25rem;
@@ -66,10 +66,11 @@
                 margin: 0 1rem;
             }
 
-            .addCategoryForm {
+            .addPaymentForm {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                gap: .5rem;
             }
 
             .payDate {
