--- a/frontend/src/pages/ChangeDepositPage.scss
+++ b/frontend/src/pages/ChangeDepositPage.scss
@@ -9,6 +9,11 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        gap: 1rem;
+
+        h2 {
+            margin: 0;
+        }
     }
 }
 
