--- a/frontend/src/pages/SchedulingPage.scss
+++ b/frontend/src/pages/SchedulingPage.scss
@@ -29,70 +29,60 @@
         width: 18rem;
     }
 
-    .seriesItems {
+    .seriesLibrary {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         gap: 1rem;
     }
 
-    .seriesItemCard {
+    .seriesItemCards {
         display: flex;
-        flex-direction: column;
-        padding-bottom: .5rem;
-        align-items: center;
-        border-radius: 20px;
-        background: #282A36;
-        width: 15rem;
-        overflow-x: auto;
+        flex-direction: row;
+        gap: 1rem;
 
-        a {
-            text-decoration: none;
-        }
-
-        span {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            background: #1A1A1A;
-            border-radius: 30px;
-            text-align: center;
-            height: 2rem;
-            width: 4rem;
-            margin: .5rem;
-        }
-
-        .seriesItem {
+        .seriesItemCard {
             display: flex;
             flex-direction: column;
-        }
-
-        .paymentItem {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
+            padding-bottom: .5rem;
             align-items: center;
-            background: #1d1d1d;
-            border-radius: 10px;
-            width: 85%;
-            margin: 0 1rem;
-            padding-bottom: 1rem;
-        }
+            border-radius: 20px;
+            background: #282A36;
+            height: 100%;
+            width: 15rem;
+            overflow-x: auto;
+
+            .seriesItem {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .paymentItem {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                background: #1d1d1d;
+                border-radius: 10px;
+                width: 85%;
+                margin: 0 1rem;
+                padding-bottom: 1rem;
+            }
 
 
-        h1, h2, h3, h4 {
-            align-self: center;
-            margin: .5rem .5rem 0 1rem;
-            font-style: normal;
-            font-weight: normal;
-        }
+            h1, h2, h3, h4 {
+                align-self: center;
+                margin: .5rem .5rem 0 1rem;
+                font-style: normal;
+                font-weight: normal;
+            }
 
-        h1 {
-            font-size: 1.8rem;
-        }
+            h1 {
+                font-size: 1.8rem;
+            }
 
-        h2 {
-            font-size: 1.4rem;
+            h2 {
+                font-size: 1.4rem;
+            }
         }
     }
 }
