--- a/frontend/src/components/TextBox.scss
+++ b/frontend/src/components/TextBox.scss
@@ -3,3 +3,9 @@
     border-color: transparent;
     padding: .3rem .5rem;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
