--- a/frontend/src/components/navbar/NavBar.scss
+++ b/frontend/src/components/navbar/NavBar.scss
@@ -23,3 +23,9 @@
         text-decoration: none;
     }
 }
+
+@media only screen and (max-width: 800px) {
+    .navBar {
+        display: none;
+    }
+}
