--- a/frontend/src/pages/CategoryPage.scss
+++ b/frontend/src/pages/CategoryPage.scss
@@ -11,7 +11,6 @@
 }
 
 .categoryHeader {
-    display: flex;
     align-self: center;
 }
 
@@ -38,7 +37,12 @@
 
         .categoryItem {
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
+            align-items: center;
+
+            h1, h2 {
+                margin: 0;
+            }
         }
 
         .payments {
@@ -103,6 +107,18 @@
             margin-right: 1rem;
             font-style: normal;
             font-weight: normal;
+        }
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .categories {
+        .categoryItemCard {
+            width: 20rem;
+
+            .categoryItem {
+                flex-wrap: wrap;
+            }
         }
     }
 }
