Fit CategoryPage on smaller display

--- a/frontend/src/components/Button.scss
+++ b/frontend/src/components/Button.scss
@@ -3,7 +3,7 @@
     background: #0070BA;
     border-radius: 10px;
     text-align: center;
-    padding: .5rem 1rem;
+    padding: .3rem .5rem;
     cursor: pointer;
     border: transparent;
 
