--- a/frontend/src/pages/CategoryPage.scss
+++ b/frontend/src/pages/CategoryPage.scss
@@ -26,6 +26,13 @@
     height: 100%;
     overflow-y: auto;
 
+    .addCategory {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        margin: .5rem 0 0 .5rem;
+    }
+
     .categoryItemCard {
         display: flex;
         flex-direction: column;
@@ -50,7 +57,7 @@
             flex-direction: column;
             gap: 1rem;
             width: 100%;
-            margin-bottom: 1rem;
+            margin-bottom: .5rem;
 
             .button {
                 margin-top: 0;
@@ -112,12 +119,27 @@
 }
 
 @media only screen and (max-width: 800px) {
+
     .categories {
+
+        .addCategory {
+            .inputBox {
+                width: 8rem;
+            }
+        }
+
         .categoryItemCard {
             width: 20rem;
 
-            .categoryItem {
+            .categoryItem, .payments {
                 flex-wrap: wrap;
+
+                h1 {
+                    font-size: 1.5rem;
+                }
+                h2 {
+                    font-size: 1.2rem;
+                }
             }
         }
     }
