--- a/frontend/src/pages/ChangePaymentPage.scss
+++ b/frontend/src/pages/ChangePaymentPage.scss
@@ -14,6 +14,21 @@
         h2 {
             margin: 0;
         }
+
+        .payDate {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+            margin: 1rem 0;
+
+            #payDate, #payDate-label {
+                color: white;
+            }
+        }
+
+        svg {
+            color: white;
+        }
     }
 }
 
