--- a/frontend/src/pages/SchedulingPage.scss
+++ b/frontend/src/pages/SchedulingPage.scss
@@ -90,3 +90,11 @@
         }
     }
 }
+
+@media only screen and (max-width: 800px) {
+    .series {
+        .addSeries {
+            width: 16rem;
+        }
+    }
+}
