--- a/frontend/src/components/Button.scss
+++ b/frontend/src/components/Button.scss
@@ -5,10 +5,19 @@
     text-align: center;
     padding: .3rem .5rem;
     cursor: pointer;
-    border: transparent;
+    border: none;
 
     transition: ease background-color 250ms;
     &:hover {
-        background: #0068ac;
+        background: #005793;
+    }
+}
+
+.highlight {
+    background-color: #bf360c;
+
+    transition: ease background-color 250ms;
+    &:hover {
+        background-color: #ff3d00;
     }
 }
