--- a/frontend/src/pages/CategoryPage.scss
+++ b/frontend/src/pages/CategoryPage.scss
@@ -1,7 +1,8 @@
 .categoryPage {
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    justify-content: center;
+    margin: .5rem 1rem;
     overflow: auto;
 
     .button {
@@ -19,7 +20,6 @@
     flex-direction: row;
     border-radius: 10px;
     border: .5rem solid #1A1A1A;
-    margin: 0 1rem;
     background: #1A1A1A;
     gap: 1rem;
     height: 100%;
