--- a/frontend/src/pages/DepositPage.scss
+++ b/frontend/src/pages/DepositPage.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin: .5rem 1rem;
     width: 100vw;
     overflow: auto;
 
@@ -15,7 +16,6 @@
         flex-direction: row;
         border-radius: 10px;
         border: .5rem solid #1A1A1A;;
-        margin: 0 1rem 0 1rem;
         background: #1A1A1A;
         gap: 1rem;
         height: 100%;
