--- a/frontend/src/pages/HomePage.scss
+++ b/frontend/src/pages/HomePage.scss
@@ -1,19 +1,21 @@
 .homePage {
-    margin-left: 1rem;
+    margin: .5rem 1rem;
     display: flex;
+    flex: 1 1 auto;
     flex-direction: row;
     gap: 1rem;
     overflow: hidden;
 }
 
 .pieChart {
-    width: 50%;
+    flex: 1 1 auto;
     color: black;
 }
 
 .homeCategories, .recentPayments {
     display: flex;
     border: .5rem solid #1A1A1A;
+    flex: 0 0 auto;
     padding: 0 .5rem;
     align-items: center;
     flex-direction: column;
@@ -22,6 +24,10 @@
     background: #1A1A1A;
     width: 20rem;
     overflow-y: auto;
+
+    h3 {
+        font-weight: normal;
+    }
 
     .categoryItemCard, .recentPaymentItemCard {
         display: flex;
@@ -33,11 +39,12 @@
         justify-content: space-between;
 
         h1 {
-            font-size: 1.7rem;
+            font-size: 1.5rem;
         }
 
         h2 {
-            font-size: 1.4rem;
+            font-size: 1.2rem;
+            font-weight: normal;
         }
 
         h1, h2 {
