--- a/frontend/src/pages/SchedulingPage.scss
+++ b/frontend/src/pages/SchedulingPage.scss
@@ -1,6 +1,7 @@
 .schedulingPage {
     display: flex;
     flex-direction: column;
+    margin: .5rem 1rem;
     gap: 1rem;
     width: 100vw;
     overflow: auto;
@@ -16,7 +17,6 @@
     flex-direction: row;
     border-radius: 10px;
     border: .5rem solid #1A1A1A;;
-    margin: 0 1rem 0 1rem;
     background: #1A1A1A;
     gap: 1rem;
     height: 100%;
