Added NavBar Button

--- a/frontend/src/components/navbar/NavBar.scss
+++ b/frontend/src/components/navbar/NavBar.scss
@@ -4,12 +4,12 @@
     justify-content: space-between;
     align-items: center;
     flex: 0 0 auto;
-    width: 8em;
+    width: 9em;
     background: #1A1A1A;
     gap: .5rem;
     padding: .5rem;
 
-    div {
+    .navBar-buttons {
         display: flex;
         flex-direction: column;
         gap: .5rem;
