--- a/frontend/src/pages/SchedulingPage.scss
+++ b/frontend/src/pages/SchedulingPage.scss
@@ -22,7 +22,7 @@
     height: 100%;
     overflow-y: auto;
 
-    form {
+    .addSeries {
         display: flex;
         flex-direction: column;
         gap: .5rem;
@@ -37,6 +37,10 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
+
+        h1 {
+            margin: 0;
+        }
     }
 
     .seriesItemCards {
@@ -47,7 +51,7 @@
         .seriesItemCard {
             display: flex;
             flex-direction: column;
-            padding-bottom: .5rem;
+            padding: .5rem 0;
             align-items: center;
             border-radius: 20px;
             background: #282A36;
