--- a/frontend/src/pages/DepositPage.scss
+++ b/frontend/src/pages/DepositPage.scss
@@ -6,11 +6,6 @@
     width: 100vw;
     overflow: auto;
 
-    .depositHeader {
-        display: flex;
-        align-self: center;
-    }
-
     .depositsField {
         display: flex;
         flex-direction: row;
@@ -25,6 +20,12 @@
             display: flex;
             flex-direction: column;
             gap: 1rem;
+
+            .formWrap {
+                display: flex;
+                flex-direction: column;
+                align-content: center;
+            }
 
             .depositDate {
                 display: flex;
