--- a/frontend/src/pages/CategoryPage.scss
+++ b/frontend/src/pages/CategoryPage.scss
@@ -25,6 +25,10 @@
         flex-direction: column;
         align-items: stretch;
         margin: .5rem 0 0 .5rem;
+
+        .button {
+            margin: .5rem 0;
+        }
     }
 
     .categoryItemCard {
@@ -83,10 +87,6 @@
                 justify-content: center;
                 gap: 1rem;
                 margin: 1rem;
-
-                #payDate, #payDate-label {
-                    color: white;
-                }
             }
 
             svg {
