--- a/frontend/src/pages/CategoryPage.scss
+++ b/frontend/src/pages/CategoryPage.scss
@@ -1,8 +1,8 @@
 .categoryPage {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    width: 100vw;
+    justify-content: center;
+    margin: .5rem 1rem;
     overflow: auto;
 
     .button {
@@ -10,27 +10,31 @@
     }
 }
 
-.categoryHeader {
-    display: flex;
-    align-self: center;
-}
-
 .categories {
     display: flex;
     flex-direction: row;
     border-radius: 10px;
-    border: .5rem solid #1A1A1A;;
-    margin: 0 1rem 0 1rem;
+    border: .5rem solid #1A1A1A;
     background: #1A1A1A;
     gap: 1rem;
     height: 100%;
     overflow-y: auto;
 
+    .addCategory {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        margin: .5rem 0 0 .5rem;
+
+        .button {
+            margin: .5rem 0;
+        }
+    }
+
     .categoryItemCard {
         display: flex;
         flex-direction: column;
         flex: 0 0 auto;
-        align-items: center;
         border-radius: 20px;
         background: #282A36;
         width: 25rem;
@@ -38,7 +42,12 @@
 
         .categoryItem {
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
+            align-items: center;
+
+            h1, h2 {
+                margin: 0;
+            }
         }
 
         .payments {
@@ -46,7 +55,7 @@
             flex-direction: column;
             gap: 1rem;
             width: 100%;
-            margin-bottom: 1rem;
+            margin-bottom: .5rem;
 
             .button {
                 margin-top: 0;
@@ -66,10 +75,11 @@
                 margin: 0 1rem;
             }
 
-            .addCategoryForm {
+            .addPaymentForm {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                gap: .5rem;
             }
 
             .payDate {
@@ -77,10 +87,6 @@
                 justify-content: center;
                 gap: 1rem;
                 margin: 1rem;
-
-                #payDate, #payDate-label {
-                    color: white;
-                }
             }
 
             svg {
@@ -102,6 +108,33 @@
             margin-right: 1rem;
             font-style: normal;
             font-weight: normal;
+        }
+    }
+}
+
+@media only screen and (max-width: 800px) {
+
+    .categories {
+        .addCategory {
+            .inputBox {
+                width: 8rem;
+            }
+        }
+
+        .categoryItemCard {
+            width: 20rem;
+
+            .categoryItem, .payments {
+                flex-wrap: wrap;
+
+                h1 {
+                    font-size: 1.5rem;
+                }
+
+                h2 {
+                    font-size: 1.2rem;
+                }
+            }
         }
     }
 }
