--- a/frontend/src/pages/ChangePaymentPage.scss
+++ b/frontend/src/pages/ChangePaymentPage.scss
@@ -9,6 +9,26 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        gap: .5rem;
+
+        h2 {
+            margin: 0;
+        }
+
+        .payDate {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+            margin: 1rem 0;
+
+            #payDate, #payDate-label {
+                color: white;
+            }
+        }
+
+        svg {
+            color: white;
+        }
     }
 }
 
