--- a/frontend/src/pages/DepositPage.scss
+++ b/frontend/src/pages/DepositPage.scss
@@ -2,29 +2,47 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin: .5rem 1rem;
     width: 100vw;
     overflow: auto;
-
-    .depositHeader {
-        display: flex;
-        align-self: center;
-    }
 
     .depositsField {
         display: flex;
         flex-direction: row;
         border-radius: 10px;
         border: .5rem solid #1A1A1A;;
-        margin: 0 1rem 0 1rem;
         background: #1A1A1A;
         gap: 1rem;
         height: 100%;
         overflow-y: auto;
 
+        .addDeposit {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+
+            .formWrap {
+                display: flex;
+                flex-direction: column;
+                align-content: center;
+            }
+
+            .depositDate {
+                display: flex;
+                justify-content: center;
+                gap: 1rem;
+                margin: 1rem;
+            }
+        }
+
         .deposits {
             display: flex;
             flex-direction: row;
             gap: 1rem;
+
+            .button {
+                margin: 0 .5rem;
+            }
 
             .depositCard {
                 display: flex;
@@ -39,40 +57,26 @@
 
                 .depositButtons {
                     display: flex;
-
-                    a {
-                        text-decoration: none;
-                    }
-
-                    span {
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        color: white;
-                        background: #1A1A1A;
-                        border-radius: 30px;
-                        text-align: center;
-                        height: 2rem;
-                        width: 4rem;
-                        margin: .5rem;
-                    }
+                    flex-direction: row;
+                    justify-content: space-between;
                 }
             }
         }
 
         h1, h2 {
             align-self: center;
-            margin: .5rem .5rem 0 1rem;
             font-style: normal;
             font-weight: normal;
         }
 
         h1 {
             font-size: 2rem;
+            margin: 0 0.25rem;
         }
 
         h2 {
-            font-size: 1.4rem;
+            font-size: 1.3rem;
+            margin: .5rem 0;
         }
     }
 }
