--- a/frontend/src/pages/SchedulingPage.scss
+++ b/frontend/src/pages/SchedulingPage.scss
@@ -1,14 +1,25 @@
 .schedulingPage {
     display: flex;
     flex-direction: column;
+    margin: .5rem 1rem;
     gap: 1rem;
     width: 100vw;
     overflow: auto;
-}
 
-.schedulingHeader {
-    display: flex;
-    align-self: center;
+    h1, h2, h3, h4 {
+        align-self: center;
+        margin: .5rem .5rem 0 1rem;
+        font-style: normal;
+        font-weight: normal;
+    }
+
+    h1 {
+        font-size: 1.8rem;
+    }
+
+    h2 {
+        font-size: 1.4rem;
+    }
 }
 
 .series {
@@ -16,23 +27,30 @@
     flex-direction: row;
     border-radius: 10px;
     border: .5rem solid #1A1A1A;;
-    margin: 0 1rem 0 1rem;
     background: #1A1A1A;
     gap: 1rem;
     height: 100%;
     overflow-y: auto;
 
-    form {
+    .addSeries {
         display: flex;
         flex-direction: column;
         gap: .5rem;
         width: 18rem;
+
+        label {
+            color: white;
+        }
     }
 
     .seriesLibrary {
         display: flex;
         flex-direction: column;
         gap: 1rem;
+
+        h1 {
+            margin: 0;
+        }
     }
 
     .seriesItemCards {
@@ -43,7 +61,7 @@
         .seriesItemCard {
             display: flex;
             flex-direction: column;
-            padding-bottom: .5rem;
+            padding: .5rem 0;
             align-items: center;
             border-radius: 20px;
             background: #282A36;
@@ -67,26 +85,14 @@
                 margin: 0 1rem;
                 padding-bottom: 1rem;
             }
-
-
-            h1, h2, h3, h4 {
-                align-self: center;
-                margin: .5rem .5rem 0 1rem;
-                font-style: normal;
-                font-weight: normal;
-            }
-
-            h1 {
-                font-size: 1.8rem;
-            }
-
-            h2 {
-                font-size: 1.4rem;
-            }
         }
     }
 }
 
-.MuiInputLabel-root, .MuiOutlinedInput-input {
-    color: white;
+@media only screen and (max-width: 800px) {
+    .series {
+        .addSeries {
+            width: 16rem;
+        }
+    }
 }
