Added error and success alerts

--- a/frontend/src/pages/SchedulingPage.scss
+++ b/frontend/src/pages/SchedulingPage.scss
@@ -35,6 +35,7 @@
     .addSeries {
         display: flex;
         flex-direction: column;
+        padding: .2rem;
         gap: .5rem;
         width: 18rem;
 
